Further styling changes to make the page more accurate

--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
 </head>
 <body>
 
-    <div id="navbarleft">
-        <ul>
-            <li><a href="about.asp">About</a></li>
-            <li><a href="store.asp">Store</a></li>
-        </ul>
-    </div>
+    <div class="navbar">
+        <div id="navbarleft">
+            <ul>
+                <li><a href="about.asp">About</a></li>
+                <li><a href="store.asp">Store</a></li>
+            </ul>
+        </div>
 
-    <div id="navbarright">
-        <ul>
-            <li><a href="gmail.asp">Gmail</a></li>
-            <li><a href="images.asp">Images</a></li>
-            <li><a href="signin.asp">Sign In</a></li>
-          </ul>
+        <div id="navbarright">
+            <ul>
+                <li><a href="gmail.asp">Gmail</a></li>
+                <li><a href="images.asp">Images</a></li>
+                <li><a href="signin.asp">Sign In</a></li>
+            </ul>
+        </div>
     </div>
 
 
@@ -35,20 +37,22 @@
         <button>I'm Feeling Lucky</button>
     </div>
 
-    <div id="footerleft">
-        <ul>
-            <li><a href="about.asp">Advertising</a></li>
-            <li><a href="store.asp">Business</a></li>
-            <li><a href="store.asp">How Search works</a></li>
-          </ul>
-    </div>
+    <div class="navbar">
+        <div id="footerleft">
+            <ul>
+                <li><a href="about.asp">Advertising</a></li>
+                <li><a href="store.asp">Business</a></li>
+                <li><a href="store.asp">How Search works</a></li>
+            </ul>
+        </div>
 
-    <div id="footerright">
-        <ul>
-            <li><a href="gmail.asp">Privacy</a></li>
-            <li><a href="images.asp">Terms</a></li>
-            <li><a href="signin.asp">Settings</a></li>
-          </ul>
+        <div id="footerright">
+            <ul>
+                <li><a href="gmail.asp">Privacy</a></li>
+                <li><a href="images.asp">Terms</a></li>
+                <li><a href="signin.asp">Settings</a></li>
+            </ul>
+        </div>
     </div>
 
 
